--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,8 +1,8 @@
 <h1>タスク一覧</h1>
 
 <ul>
-  <% @tasks.each do |tasuk| %>
-    <li><%= link_to tasuk.id, tasuk %> : <%= tasuk.content %> &gt; <%= tasuk.content %></li>
+  <% @tasks.each do |task| %>
+    <li><%= link_to task.id, task %> : <%= task.content %> &gt; <%= task.content %></li>
   <% end %>
 </ul>
 
